<resources>
    <string name="app_name">4MAZAD</string>
    <string name="language">عربي</string>
    <string name="emailOrMobile">Email\\Mobile</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="login">login</string>
    <string name="signup">sign up</string>
    <string name="or">Or</string>
    <string name="continueAsGuest">Continue as a Guest</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="userName">User Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="civilIdFront">Civil Id\n Front</string>
    <string name="civilIdBack">Civil Id\n Back</string>
    <string name="verifyMobile">Verify Mobile Number</string>
    <string name="enterCode">Enter the verifying code sent to</string>
    <string name="verify">Verify</string>
    <string name="resend">Send again</string>
    <string name="doNotReceived">Don’t received the code?</string>
    <string name="search">Search...</string>
    <string name="categories">Categories</string>
    <string name="LatestAuctions">Latest Auctions</string>
    <string name="highValue">High Value</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="done">done</string>
    <string name="AtoZ">Name : A to Z</string>
    <string name="ZtoA">Name : Z to A</string>
    <string name="lowToHigh">Price : low to High</string>
    <string name="highToLow">Price : High to low</string>
    <string name="carType">Car Type</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="clear">Clear</string>
    <string name="auctionDetails">Auction Details</string>
    <string name="startOn">Start On</string>
    <string name="remaining">Time Remaining</string>
    <string name="minimumIncrement">Minimum Increment :</string>
    <string name="currentBid">Current Bid</string>
    <string name="bidNow">BID NOW</string>
    <string name="toBidAuction">To bid on this auction, You will pay</string>
    <string name="pay">pay</string>
    <string name="lastBid">Latest Bid by :</string>
    <string name="faq">FAQ</string>
    <string name="contactUs">Contact Us</string>
    <string name="aboutUs">About Us</string>
    <string name="account">My Account</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="myBidding">My Bidding</string>
    <string name="logout">Logout</string>
    <string name="newPassword">New Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="send">send</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="price">Price</string>
    <string name="agree">I Agree For</string>
    <string name="termsAndConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="save">save</string>
    <string name="generalError">An Error Occurred Please Try Again Later</string>
    <string name="myAccount">My Account</string>
    <string name="filter">Filter</string>
    <string name="OperationFailed">Payment Operation Is Failed</string>
    <string name="thanksMessage">Thanks For You Contact With Us, Your Message Is Sent,  We will Go Back To You  at the Earliest</string>
    <string name="enterEmail">Enter Email Address</string>
    <string name="enterSubject">Enter Subject</string>
    <string name="enterMessage">Enter Message</string>
    <string name="invalidEmail">Incorrect Email</string>
    <string name="paymentHistory">Payment History</string>
    <string name="changePackage">Change Package</string>
    <string name="closedPrice">Closed Price : </string>
    <string name="closedDate">Closed Date : </string>
    <string name="winnerBy">Winner by : </string>
    <string name="live">Live</string>
    <string name="ended">Ended</string>
    <string name="country">Country</string>
    <string name="enterName">Enter Your Full Name</string>
    <string name="enterMobile">Enter Your Mobile Number</string>
    <string name="invalidMobile">Incorrect Mobile Number</string>
    <string name="enterUserName">Enter YourUserName</string>
    <string name="enterPassword">Enter Your Password</string>
    <string name="invalidPass">Password Too Short</string>
    <string name="mismatchPass">Mismatch Password</string>
    <string name="civilId">CivilId</string>
    <string name="emailAlreadyExist">Email Already Exists</string>
    <string name="enterCivilId">Enter Your CivilId</string>
    <string name="userNameAlreadyExist">userName Already Exists</string>
    <string name="mobileAlreadyExist">Mobile Number Already Exist</string>
    <string name="civilIdAlreadyExist">Civil Id Already Exist</string>
    <string name="civilIdNotValid">Civil Id Incorrect or Invalid</string>
    <string name="sessionTimeOut">"Session Time Out , Login Agin "</string>
    <string name="invalidCivilId">Incorrect CivilId</string>
    <string name="agreeForTerms">Agree For <![CDATA[Terms & Conditions]]></string>
    <string name="countryCode">Country Code</string>
    <string name="selectCountryCode">Select County Code</string>
    <string name="selectCivilIdImages">Select CivilId Images</string>
    <string name="day">d</string>
    <string name="kuwaitCurrency">KWD</string>
    <string name="noNotification">لا يوجد إشعارات لعرضها</string>
    <string name="fullName">Full Name</string>
    <string name="profileUpdated">Your Profile Updated Successfully</string>
    <string name="wrongCurrentPassword">Current Password Is Wrong</string>
    <string name="passwordChanged">Password Changed Successfully</string>
    <string name="incorrectPhoneOrPass">Incorrect Mobile Number OR Password</string>
    <string name="addPackage">Pay Package</string>
    <string name="noPackagesFound">No Packages Found</string>
    <string name="noHistoryFound">No Payment History Found</string>
    <string name="subscribedSuccessfully">Your Subscription Done Successfully</string>
    <string name="paid">You Paid</string>
    <string name="subscribedOn">For Subscription on</string>
    <string name="Package">Package</string>
    <string name="bid">You bid on a</string>
    <string name="and">And</string>
    <string name="searchResult">Search Results</string>
    <string name="wrongCode">"Wrong Verification Code  "</string>
    <string name="accountCreated">"Your Account Created Successfully "</string>
    <string name="fillCodeFields">Enter The Code First</string>
    <string name="noEndedRequestsFound">No Ended Requests Founds</string>
    <string name="noCurrentRequestsFound">No Current Requests Found</string>
    <string name="me">Me</string>
    <string name="brand">Brand</string>
    <string name="checkAdOnApp">For Showing Ad Details Download \n\n (4Mazad App)</string>
    <string name="iPhone">iPhone</string>
    <string name="android">Android</string>
    <string name="canNotBid">"you cant bid with this amount "</string>
    <string name="paymentError">an Payment Error Occurred</string>
    <string name="bidSuccessfully">Bidding process completed successfully</string>
    <string name="canNotDecrement">Can\'t Decrement Less Than Minimum Value</string>
    <string name="kuwaitCode">+965</string>
    <string name="noAuction">No Auctions Founds</string>
    <string name="myWinning">My Winning Auctions</string>
    <string name="auctionPaidSuccessfully">Auction is Paid Successfully</string>
    <string name="ForBuy">For Buy</string>
    <string name="startOn2">Start On:</string>
    <string name="submit">Submit</string>
    <string name="selectPackage">Select Package</string>
    <string name="bidders">Bidders</string>
    <string name="subscribe">Subscribe</string>
    <string name="noBidders">No Bidders For This Auction Till Now</string>
    <string name="auctionEnded">Auction Time Is Ended</string>
    <string name="help">Help</string>
    <string name="checkupFile">Check Up File</string>
    <string name="emailNotFound">Email is Not Found</string>
    <string name="fileNotFound">File Not Found</string>
</resources>
