<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_change_password_cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_change_password_il_oldPassContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="35dp"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_password_et_oldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGray"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/oldPassword"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_change_password_il_newPassContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_il_oldPassContainer"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_il_oldPassContainer"
        app:layout_constraintTop_toBottomOf="@+id/fragment_change_password_il_oldPassContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_password_et_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGray"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/newPassword"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_change_password_il_confirmPassContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_il_newPassContainer"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_il_newPassContainer"
        app:layout_constraintTop_toBottomOf="@+id/fragment_change_password_il_newPassContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_change_password_et_confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGray"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:paddingBottom="15dp"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fragment_change_password_tv_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/login_btn"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_il_confirmPassContainer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_il_confirmPassContainer"
        app:layout_constraintVertical_bias="0.0" />

    <include layout="@layout/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>